In the application.properties file have inserted a line spring.jpa.hibernate.ddl-auto=create now the DB is created automatically when the application starts, this fixed the problem with the "groups" page.
Renamed group to musicBand (group-reserved sql word)
(user is also a reserved word, but I decided to keep it, since it is the most appropriate, I solved the problem with the table annotation)

created an Instrument entity.

--- a/src/main/resources/templates/groups.mustache
+++ b/src/main/resources/templates/groups.mustache
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>choose group</title>
+    <title>choose musicBand</title>
 </head>
 <body>
 
